# KNU_ROS_Team_6

./: README.md  face.py  ros_server.py  turtle_collision.cpp  turtle_position_move.cpp  누적회의록.hwp
Android Controller/: .gitignore  build.gradle
Android Controller/app/: build.gradle
Android Controller/app/src/main/: AndroidManifest.xml
Android Controller/app/src/main/java/com/example/ros/: MainActivity.java  NonSwipeableViewPager.java  SettingActivity.java
Android Controller/app/src/main/java/com/example/ros/Adapter/: MainPagerAdapter.java
Android Controller/app/src/main/java/com/example/ros/MainViewPager/: FirstFragment.java  SecondFragment.java  ThirdFragment.java
Android Controller/app/src/main/res/layout/: activity_main.xml  activity_setting.xml  fragment_first.xml  fragment_second.xml  fragment_third.xml
Android Controller/app/src/main/res/values/: colors.xml  styles.xml
Android Controller/gradle/wrapper/: gradle-wrapper.properties
Android Controller/src/main/: AndroidManifest.xml
Android Controller/src/main/java/com/example/ros/: MainActivity.java  RetrofitAPI.java  SettingActivity.java
Android Controller/src/main/java/com/example/ros/MainViewPager/: FirstFragment.java  SecondFragment.java  ThirdFragment.java
Android Controller/src/main/res/layout/: activity_setting.xml  fragment_first.xml  fragment_second.xml  fragment_third.xml
Android Controller/src/main/res/menu/: menu.xml
Android Controller/src/main/res/values/: colors.xml  strings.xml
knu_ros_lecture/: CMakeLists.txt  package.xml
knu_ros_lecture/launch/: Turtlesim.launch  chat.launch  usermsg.launch
knu_ros_lecture/src/: Turtlebot3_lidar_viewer.cpp  opencv_intro.cpp  turtle_ca.cpp  turtle_position_move.cpp  turtle_rpiCamera_detection_sample.cpp  turtlebot3_pose_lidar_viewer_register.cpp
